@@ -66,7 +66,6 @@ Routines missing from eglib, by count number:
       3 g_thread_supported
       3 g_thread_init
       3 g_spaced_primes_closest
-      3 g_slist_insert_sorted
       3 g_shell_quote
       3 g_setenv
       3 g_locale_to_utf8
